--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "autosize": "^3.0.20",
+    "babel-runtime": "^6.23.0",
     "bootstrap": "^3.3.7",
     "bootstrap-switch": "^3.3.4",
     "classnames": "^2.2.5",
@@ -22,6 +24,7 @@
     "jquery-slimscroll": "^1.3.8",
     "js-cookie": "^2.1.4",
     "simple-line-icons": "^2.4.1",
+    "toastr": "^2.1.2",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0"
   },
