--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "babel-runtime": "^6.23.0",
     "bootstrap": "^3.3.7",
     "bootstrap-switch": "^3.3.4",
-    "classnames": "^2.2.5",
     "font-awesome": "^4.7.0",
     "jquery": "^1.12.4",
     "jquery-slimscroll": "^1.3.8",
     "js-cookie": "^2.1.4",
+    "popper.js": "^1.10.2",
     "simple-line-icons": "^2.4.1",
     "toastr": "^2.1.2",
     "vue": "^2.3.4",
