--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "jquery": "^1.12.4",
     "jquery-slimscroll": "^1.3.8",
     "js-cookie": "^2.1.4",
-    "popper.js": "^1.10.2",
     "simple-line-icons": "^2.4.1",
+    "tether": "^1.4.0",
     "toastr": "^2.1.2",
     "vue": "^2.3.4",
     "vue-router": "^2.3.0"
