--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery-slimscroll": "^1.3.8",
     "js-cookie": "^2.1.4",
     "simple-line-icons": "^2.4.1",
+    "sweetalert2": "^6.6.5",
     "tether": "^1.4.0",
     "toastr": "^2.1.2",
     "vue": "^2.3.4",
