--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "autosize": "^3.0.20",
     "babel-runtime": "^6.23.0",
     "bootstrap": "^3.3.7",
+    "bootstrap-datepicker": "^1.7.1",
+    "bootstrap-sweetalert": "^1.0.1",
     "bootstrap-switch": "^3.3.4",
     "font-awesome": "^4.7.0",
     "jquery": "^1.12.4",
     "jquery-slimscroll": "^1.3.8",
     "js-cookie": "^2.1.4",
     "simple-line-icons": "^2.4.1",
-    "sweetalert2": "^6.6.5",
     "tether": "^1.4.0",
     "toastr": "^2.1.2",
     "vue": "^2.3.4",
