--- a/src/router/config.json
+++ b/src/router/config.json
@@ -1,8 +1,8 @@
 [
   {
     "title": "Dashboard",
-    "path": "/main",
-    "src": "@/views/dashboard",
+    "path": "/main/",
+    "src": "dashboard",
     "summary": "statistics, charts, recent events and reports",
     "children": []
   },
@@ -13,91 +13,91 @@
   {
     "title": "Color Library",
     "path": "/main/ui_colors",
-    "src": "@/views/ui_colors",
+    "src": "ui_colors",
     "summary": "color variants for metronic and bootstrap custom elements and components",
     "children": []
   },
   {
     "title": "Font Icons",
     "path": "/main/ui_icons",
-    "src": "@/views/ui_icons",
+    "src": "ui_icons",
     "summary": "fontawesome, simple line icons",
     "children": []
   },
   {
     "title": "General Components",
     "path": "/main/ui_general",
-    "src": "@/views/ui_general",
+    "src": "ui_general",
     "summary": "bootstrap alerts, notes, tooltips, progress bars, labels, badges, paginations and more",
     "children": []
   },
   {
-    "heading": true,
-    "title": "Components"
+    "title": "Components",
+    "heading": true
   },
   {
     "title": "Buttons",
     "path": "/main/ui_buttons",
-    "src": "@/views/ui_buttons",
+    "src": "ui_buttons",
     "summary": "",
     "children": []
   },
   {
     "title": "Alerts",
     "path": "/main/ui_alerts",
-    "src": "@/views/ui_alerts",
+    "src": "ui_alerts",
     "summary": "",
     "children": []
   },
   {
     "title": "Modals",
     "path": "/main/ui_modals",
-    "src": "@/views/ui_modals",
+    "src": "ui_modals",
     "summary": "",
     "children": []
   },
   {
     "title": "Tabs",
     "path": "/main/ui_tabs",
-    "src": "@/views/ui_tabs",
+    "src": "ui_tabs",
     "summary": "",
     "children": []
   },
   {
     "title": "Tooltips",
     "path": "/main/ui_tooltips",
-    "src": "@/views/ui_tooltips",
+    "src": "ui_tooltips",
     "summary": "",
     "children": []
   },
   {
     "title": "Inputs",
     "path": "/main/ui_inputs",
-    "src": "@/views/ui_inputs",
+    "src": "ui_inputs",
     "summary": "",
     "children": []
   },
   {
     "title": "Datepickers",
     "path": "/main/ui_datepickers",
-    "src": "@/views/ui_datepickers",
+    "src": "ui_datepickers",
     "summary": "",
     "children": []
   },
   {
-    "heading": true,
-    "title": "portlets"
+    "title": "portlets",
+    "heading": true
   },
   {
     "title": "Portlets",
     "path": "/main/ui_portlets",
-    "src": "@/views/ui_portlets",
+    "src": "ui_portlets",
     "summary": "",
     "children": []
   },
   {
-    "heading": true,
-    "title": "Menu Example"
+    "title": "Menu Example",
+    "heading": true
   },
   {
     "title": "Multi Level Menu",
