--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.1.4",
+    "vue-markdown-loader": "^2.0.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.3.4",
     "webpack": "^2.2.1",
