--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "autosize": "^3.0.20",
     "babel-runtime": "^6.23.0",
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.7.1",
@@ -27,6 +26,7 @@
     "tether": "^1.4.0",
     "toastr": "^2.1.2",
     "vue": "^2.3.4",
+    "vue-multiselect": "^2.0.2",
     "vue-router": "^2.3.0"
   },
   "devDependencies": {
