--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ test/unit/coverage
 test/e2e/reports
 selenium-debug.log
 gh-pages/
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
