--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^1.12.4",
     "jquery-slimscroll": "^1.3.8",
     "js-cookie": "^2.1.4",
+    "nprogress": "^0.2.0",
     "simple-line-icons": "^2.4.1",
     "tether": "^1.4.0",
     "toastr": "^2.1.2",
