--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "jquery": "^1.12.4",
     "jquery-slimscroll": "^1.3.8",
     "js-cookie": "^2.1.4",
+    "mockjs": "^1.0.1-beta3",
     "nprogress": "^0.2.0",
     "simple-line-icons": "^2.4.1",
     "tether": "^1.4.0",
     "toastr": "^2.1.2",
     "vue": "^2.3.4",
     "vue-multiselect": "^2.0.2",
-    "vue-router": "^2.3.0"
+    "vue-router": "^2.3.0",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
