--- a/src/router/config.json
+++ b/src/router/config.json
@@ -1,6 +1,7 @@
 [
   {
     "title": "指示板",
+    "icon": "home",
     "path": "/main/",
     "src": "dashboard",
     "summary": "statistics, charts, recent events and reports",
@@ -12,6 +13,7 @@
   },
   {
     "title": "颜色",
+    "icon": "diamond",
     "path": "/main/color",
     "src": "pages/color.md",
     "summary": "",
@@ -19,6 +21,7 @@
   },
   {
     "title": "进度条",
+    "icon": "puzzle",
     "path": "/main/progress",
     "src": "pages/progress-bar.md",
     "summary": "",
@@ -26,6 +29,7 @@
   },
   {
     "title": "手风琴",
+    "icon": "puzzle",
     "path": "/main/accordion",
     "src": "pages/accordion.md",
     "summary": "",
@@ -33,6 +37,7 @@
   },
   {
     "title": "警告提示",
+    "icon": "puzzle",
     "path": "/main/alert",
     "src": "pages/alert.md",
     "summary": "",
@@ -40,6 +45,7 @@
   },
   {
     "title": "徽标",
+    "icon": "puzzle",
     "path": "/main/bdge",
     "src": "pages/badge.md",
     "summary": "",
@@ -47,6 +53,7 @@
   },
   {
     "title": "标签",
+    "icon": "puzzle",
     "path": "/main/lable",
     "src": "pages/lable.md",
     "summary": "",
@@ -54,6 +61,7 @@
   },
   {
     "title": "按钮",
+    "icon": "puzzle",
     "path": "/main/button",
     "src": "pages/button.md",
     "summary": "",
@@ -61,6 +69,7 @@
   },
   {
     "title": "复选框",
+    "icon": "puzzle",
     "path": "/main/checkbox",
     "src": "pages/checkbox.md",
     "summary": "",
@@ -68,6 +77,7 @@
   },
   {
     "title": "单选框",
+    "icon": "puzzle",
     "path": "/main/radio",
     "src": "pages/radio.md",
     "summary": "",
@@ -75,6 +85,7 @@
   },
   {
     "title": "日期选择器",
+    "icon": "puzzle",
     "path": "/main/datepicker",
     "src": "pages/datepicker.md",
     "summary": "",
@@ -82,6 +93,7 @@
   },
   {
     "title": "表单容器",
+    "icon": "puzzle",
     "path": "/main/form",
     "src": "pages/form.md",
     "summary": "",
@@ -89,6 +101,7 @@
   },
   {
     "title": "列表",
+    "icon": "puzzle",
     "path": "/main/list",
     "src": "pages/list.md",
     "summary": "",
@@ -96,6 +109,7 @@
   },
   {
     "title": "对话框",
+    "icon": "puzzle",
     "path": "/main/modal",
     "src": "pages/modal.md",
     "summary": "",
@@ -103,6 +117,7 @@
   },
   {
     "title": "便签",
+    "icon": "puzzle",
     "path": "/main/note",
     "src": "pages/note.md",
     "summary": "",
@@ -110,6 +125,7 @@
   },
   {
     "title": "分页",
+    "icon": "puzzle",
     "path": "/main/pagination",
     "src": "pages/pagination.md",
     "summary": "",
@@ -117,6 +133,7 @@
   },
   {
     "title": "面板",
+    "icon": "puzzle",
     "path": "/main/panel",
     "src": "pages/panel.md",
     "summary": "",
@@ -124,6 +141,7 @@
   },
   {
     "title": "气泡卡片",
+    "icon": "puzzle",
     "path": "/main/popover",
     "src": "pages/popover.md",
     "summary": "",
@@ -131,6 +149,7 @@
   },
   {
     "title": "气泡确认框",
+    "icon": "puzzle",
     "path": "/main/popconfirm",
     "src": "pages/popconfirm.md",
     "summary": "",
@@ -138,6 +157,7 @@
   },
   {
     "title": "内容窗口",
+    "icon": "puzzle",
     "path": "/main/portlet",
     "src": "pages/portlet.md",
     "summary": "",
@@ -145,6 +165,7 @@
   },
   {
     "title": "下拉选择",
+    "icon": "puzzle",
     "path": "/main/selectbox",
     "src": "pages/selectbox.md",
     "summary": "",
@@ -152,6 +173,7 @@
   },
   {
     "title": "多项选择",
+    "icon": "puzzle",
     "path": "/main/multiselect",
     "src": "pages/multiselect.md",
     "summary": "",
@@ -159,6 +181,7 @@
   },
   {
     "title": "标签页",
+    "icon": "puzzle",
     "path": "/main/tabs",
     "src": "pages/tabs.md",
     "summary": "",
@@ -166,6 +189,7 @@
   },
   {
     "title": "文本框",
+    "icon": "puzzle",
     "path": "/main/textbox",
     "src": "pages/textbox.md",
     "summary": "",
@@ -173,6 +197,7 @@
   },
   {
     "title": "工具提示",
+    "icon": "puzzle",
     "path": "/main/tooltip",
     "src": "pages/tooltip.md",
     "summary": "",
@@ -180,6 +205,7 @@
   },
   {
     "title": "开关",
+    "icon": "puzzle",
     "path": "/main/switch",
     "src": "pages/switch.md",
     "summary": "",
@@ -187,6 +213,7 @@
   },
   {
     "title": "树视图",
+    "icon": "puzzle",
     "path": "/main/tree",
     "src": "pages/tree.md",
     "summary": "",
@@ -194,6 +221,7 @@
   },
   {
     "title": "树形选择",
+    "icon": "puzzle",
     "path": "/main/treeselect",
     "src": "pages/treeselect.md",
     "summary": "",
@@ -201,6 +229,7 @@
   },
   {
     "title": "文字井",
+    "icon": "puzzle",
     "path": "/main/well",
     "src": "pages/well.md",
     "summary": "",
@@ -208,6 +237,7 @@
   },
   {
     "title": "表格",
+    "icon": "puzzle",
     "path": "/main/table",
     "src": "pages/table.md",
     "summary": "",
@@ -219,14 +249,17 @@
   },
   {
     "title": "Multi Level Menu",
+    "icon": "puzzle",
     "summary": "",
     "children": [
       {
         "title": "Item 1",
+        "icon": "puzzle",
         "summary": "",
         "children": [
           {
             "title": "Item 11",
+            "icon": "puzzle",
             "summary": "",
             "children": [],
             "path": "/main/ui_switch",
@@ -234,6 +267,7 @@
           },
           {
             "title": "Item 12",
+            "icon": "puzzle",
             "summary": "",
             "children": [],
             "path": "/main/ui_multiselect",
@@ -241,6 +275,7 @@
           },
           {
             "title": "Item 13",
+            "icon": "puzzle",
             "summary": "",
             "children": [],
             "path": "/main/ui_inputs",
@@ -250,6 +285,7 @@
       },
       {
         "title": "Item 2",
+        "icon": "puzzle",
         "summary": "",
         "children": [],
         "path": "/main/ui_general",
@@ -257,6 +293,7 @@
       },
       {
         "title": "Item 3",
+        "icon": "puzzle",
         "summary": "",
         "children": [],
         "path": "/main/page",
@@ -264,6 +301,7 @@
       },
       {
         "title": "Item 4",
+        "icon": "puzzle",
         "summary": "",
         "children": [],
         "path": "/main/ui_dropdown",
@@ -271,6 +309,7 @@
       },
       {
         "title": "Item 5",
+        "icon": "puzzle",
         "summary": "",
         "children": [],
         "path": "/main/ui_tree",
@@ -278,6 +317,7 @@
       },
       {
         "title": "Item 6",
+        "icon": "puzzle",
         "summary": "",
         "children": [],
         "path": "/main/ui_tables",
